Justed changed the Z-Index to fix issue 1

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
-  z-index: 1;
+  z-index: 100;
 }
 
 input::-webkit-outer-spin-button,
